--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,10 +4,15 @@
 
 body {
   /*background-color: rgb(38, 38, 99);*/
-  background-color: white;
+  background-color:rgb(248, 246, 240);
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
+ 
+}
+.root {
+     display: flex;
+     flex-direction: column;
 }
 .movie-container {
   display: flex;
@@ -15,11 +20,13 @@ body {
 }
 .movie {
   margin: 1rem;
-  width: 200px;
-  background-color: rgb(14, 37, 113);
+  width: 250px;
+  /*background-color: rgb(14, 37, 113);*/
+  background-color: rgb(51, 51, 86);
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   overflow: hidden;
+  position: relative;
 }
 
 .movie img {
@@ -30,4 +37,44 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  font-size: 13px;
+}
+.movie-info h3 {
+    margin: 0;
+    
+}
+.movie-over {
+    background-color: white;
+    color: rgb(4, 21, 78);
+    font-size: 13px;
+    position: absolute;
+    bottom: 0;  
+    left: 0;
+    right: 0;
+    padding: 1rem;
+    transform: translateY(100%);
+    transition: transform 0.3s ease-in-out;
+    overflow: auto;
+    max-height: 100%;
+
+}
+.movie:hover .movie-over {
+    transform: translateY(0%);
+}
+header {
+    padding: 1rem;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.search {
+    font-family: inherit;
+    font-size: 1.2rem;
+    border-radius: 10px;
+    border: 2px solid rgb(51, 51, 86);;
+    height: 40px;
+    text-align: center;
+    cursor: pointer;
+    font-size: 0.8rem;
+    padding: 0.5rem 1.5rem;
 }
