--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -17,6 +17,7 @@ body {
 .movie-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 .movie {
   margin: 1rem;
@@ -77,4 +78,26 @@ header {
     cursor: pointer;
     font-size: 0.8rem;
     padding: 0.5rem 1.5rem;
+}
+.search:focus {
+  outline: 0;
+}
+
+.tag {
+  background-color: rgb(215, 227, 249);
+  padding: 0.5rem;
+  border-radius: 5px;
+  font-size: bold;
+}
+
+.tag.green {
+ color: green;
+}
+
+.tag.blue { 
+color: rgb(19, 64, 241);
+}
+
+.tag.red {
+color: red;
 }
