--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,9 +3,8 @@
 }
 
 body {
-  /*background-color: rgb(38, 38, 99);*/
-  background-color:rgb(248, 246, 240);
-  color: white;
+  /*background-color:rgb(217, 228, 249);*/
+  color: rgb(255, 255, 255);
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
  
@@ -22,7 +21,6 @@ body {
 .movie {
   margin: 1rem;
   width: 250px;
-  /*background-color: rgb(14, 37, 113);*/
   background-color: rgb(51, 51, 86);
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
@@ -31,7 +29,9 @@ body {
 }
 
 .movie img {
-  max-width: 100%;
+  height: 300px;
+  object-fit: cover;
+  width: 100%;;
 }
 .movie-info {
   padding: 1rem;
@@ -57,7 +57,7 @@ body {
     transition: transform 0.3s ease-in-out;
     overflow: auto;
     max-height: 100%;
-
+    box-shadow: 0 0 7px 5px rgba(49, 128, 247, 0.942);
 }
 .movie:hover .movie-over {
     transform: translateY(0%);
@@ -65,19 +65,38 @@ body {
 header {
     padding: 1rem;
     display: flex;
-    justify-content: flex-end;
+   
+   
+}
+.title {
+  
+  color: rgb(135, 35, 35);
+  margin: auto;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 30px;
+  font-family: 'Black Ops One', sans-serif;
+  /*text-shadow: 0 0 7px rgba(49, 128, 247, 0.942);*/
+  text-shadow: 0 0 7px rgba(241, 78, 230, 0.942);
 }
 
 .search {
-    font-family: inherit;
+  
     font-size: 1.2rem;
     border-radius: 10px;
-    border: 2px solid rgb(51, 51, 86);;
+    border: 2px solid rgb(77, 98, 164);
+    box-shadow: 0 3px 5px rgb(77, 98, 164);;
     height: 40px;
     text-align: center;
-    cursor: pointer;
     font-size: 0.8rem;
     padding: 0.5rem 1.5rem;
+    transition: background-color 0.3s;
+  
+}
+
+.search:hover {
+  background-color: #f6f619;
+ 
 }
 .search:focus {
   outline: 0;
@@ -100,4 +119,15 @@ color: rgb(19, 64, 241);
 
 .tag.red {
 color: red;
+}
+
+.footer {
+  color: rgb(4, 21, 78);
+  font-size: 13px;
+  font-family: Helvetica;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  margin-top: 90px;
+  margin-bottom: 30px;
 }
