fix title style

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,15 +3,13 @@
 }
 
 body {
-  /*background-color:rgb(217, 228, 249);*/
   color: rgb(255, 255, 255);
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
- 
 }
 .root {
-     display: flex;
-     flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .movie-container {
   display: flex;
@@ -31,7 +29,7 @@ body {
 .movie img {
   height: 300px;
   object-fit: cover;
-  width: 100%;;
+  width: 100%;
 }
 .movie-info {
   padding: 1rem;
@@ -41,62 +39,54 @@ body {
   font-size: 13px;
 }
 .movie-info h3 {
-    margin: 0;
-    
+  margin: 0;
 }
 .movie-over {
-    background-color: white;
-    color: rgb(4, 21, 78);
-    font-size: 13px;
-    position: absolute;
-    bottom: 0;  
-    left: 0;
-    right: 0;
-    padding: 1rem;
-    transform: translateY(100%);
-    transition: transform 0.3s ease-in-out;
-    overflow: auto;
-    max-height: 100%;
-    box-shadow: 0 0 7px 5px rgba(49, 128, 247, 0.942);
+  background-color: white;
+  color: rgb(4, 21, 78);
+  font-size: 13px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 1rem;
+  transform: translateY(100%);
+  transition: transform 0.3s ease-in-out;
+  overflow: auto;
+  max-height: 100%;
+  box-shadow: 0 0 7px 5px rgba(49, 128, 247, 0.942);
 }
 .movie:hover .movie-over {
-    transform: translateY(0%);
+  transform: translateY(0%);
 }
 header {
-    padding: 1rem;
-    display: flex;
-   
-   
+  padding: 1rem;
+  display: flex;
 }
 .title {
-  
   color: rgb(135, 35, 35);
   margin: auto;
   text-align: center;
   text-transform: uppercase;
   font-size: 30px;
   font-family: 'Black Ops One', sans-serif;
-  /*text-shadow: 0 0 7px rgba(49, 128, 247, 0.942);*/
-  text-shadow: 0 0 7px rgba(241, 78, 230, 0.942);
+  
 }
 
 .search {
-  
-    font-size: 1.2rem;
-    border-radius: 10px;
-    border: 2px solid rgb(77, 98, 164);
-    box-shadow: 0 3px 5px rgb(77, 98, 164);;
-    height: 40px;
-    text-align: center;
-    font-size: 0.8rem;
-    padding: 0.5rem 1.5rem;
-    transition: background-color 0.3s;
-  
+  font-size: 1.2rem;
+  border-radius: 10px;
+  border: 2px solid rgb(77, 98, 164);
+  box-shadow: 0 3px 5px rgb(77, 98, 164);
+  height: 40px;
+  text-align: center;
+  font-size: 0.8rem;
+  padding: 0.5rem 1.5rem;
+  transition: background-color 0.3s;
 }
 
 .search:hover {
-  background-color: #f6f619;
- 
+  background-color: #c2daf1;
 }
 .search:focus {
   outline: 0;
@@ -110,15 +100,15 @@ header {
 }
 
 .tag.green {
- color: green;
+  color: green;
 }
 
-.tag.blue { 
-color: rgb(19, 64, 241);
+.tag.blue {
+  color: rgb(19, 64, 241);
 }
 
 .tag.red {
-color: red;
+  color: red;
 }
 
 .footer {
